Navbar complete. Does not collapse correctly yet

--- a/ArtCommissions/Shared/MainLayout.razor.css
+++ b/ArtCommissions/Shared/MainLayout.razor.css
@@ -21,7 +21,16 @@
         }
 
 
+.layout {
+    background-color: #F2E2C8;
+}
 
+.main {
+    min-height: 100vh;
+}
+.darken {
+    filter: brightness(95%);
+}
 
 @media (max-width: 640.98px) {
 }
